création de create character
