# swagger.json
@@ -186,6 +186,27 @@
         }
       }
     },
+    "/openquest/character/": {
+      "post": {
+        "tags": [],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      }
+    },
     "/openquest/magic/{type}": {
       "get": {
         "tags": [],
